--- a/labonline/JSZLCateView.xib
+++ b/labonline/JSZLCateView.xib
@@ -11,8 +11,11 @@
             <rect key="frame" x="0.0" y="0.0" width="310" height="200"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
-                <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="0Nh-6U-oRD">
+                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="0Nh-6U-oRD">
                     <rect key="frame" x="0.0" y="0.0" width="310" height="30"/>
+                    <constraints>
+                        <constraint firstAttribute="height" constant="30" id="Ndj-kB-ML9"/>
+                    </constraints>
                     <state key="normal">
                         <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                     </state>
@@ -20,14 +23,25 @@
                         <action selector="headButtonClicked:" destination="iN0-l3-epB" eventType="touchUpInside" id="Z5h-AY-G3f"/>
                     </connections>
                 </button>
-                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="技术专栏" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="iW0-1Z-fpi">
+                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="技术专栏" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="iW0-1Z-fpi">
                     <rect key="frame" x="10" y="5" width="150" height="20"/>
+                    <constraints>
+                        <constraint firstAttribute="height" constant="20" id="JVz-qg-koc"/>
+                    </constraints>
                     <fontDescription key="fontDescription" type="system" pointSize="12"/>
                     <color key="textColor" red="1" green="0.1915859607" blue="0.13115258390000001" alpha="1" colorSpace="calibratedRGB"/>
                     <nil key="highlightedColor"/>
                 </label>
             </subviews>
             <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+            <constraints>
+                <constraint firstAttribute="trailing" secondItem="iW0-1Z-fpi" secondAttribute="trailing" constant="150" id="Bo1-Ra-4pO"/>
+                <constraint firstItem="iW0-1Z-fpi" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" constant="5" id="Cwe-hb-W1H"/>
+                <constraint firstItem="0Nh-6U-oRD" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" id="D0F-TN-cch"/>
+                <constraint firstAttribute="trailing" secondItem="0Nh-6U-oRD" secondAttribute="trailing" id="KRG-UI-MMC"/>
+                <constraint firstItem="iW0-1Z-fpi" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" constant="10" id="LL1-ex-dcb"/>
+                <constraint firstItem="0Nh-6U-oRD" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" id="siN-nB-hOM"/>
+            </constraints>
             <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
             <connections>
                 <outlet property="headButton" destination="0Nh-6U-oRD" id="Wcz-Xn-d3B"/>
