--- a/labonline/MainStoryboard.storyboard
+++ b/labonline/MainStoryboard.storyboard
@@ -69,6 +69,9 @@
                                 <state key="normal" title="Button" image="anniu_07.png">
                                     <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                 </state>
+                                <connections>
+                                    <action selector="doLogin:" destination="ccG-Bx-Gjs" eventType="touchUpInside" id="xye-nS-0Ci"/>
+                                </connections>
                             </button>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
