主页左侧返回按钮

--- a/labonline/JSZLCateView.xib
+++ b/labonline/JSZLCateView.xib
@@ -25,6 +25,7 @@
                 </button>
                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="技术专栏" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="iW0-1Z-fpi">
                     <rect key="frame" x="10" y="5" width="150" height="20"/>
+                    <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                     <constraints>
                         <constraint firstAttribute="height" constant="20" id="JVz-qg-koc"/>
                     </constraints>
